# CSCI3060-SOFE3980-Project

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  clean.sh
backend/data/: AvailableTickets.txt  DailyTransactions.txt
backend/src/: Accounts.java  Data.java  Event.java  OperationManager.java  Record.java  Regular.java  Return.java  SellBuy.java  Tickets.java  Transactions.java  User.java
backend/src/backend/: Accounts.java  Data.java  Event.java  OperationManager.java  Record.java  Regular.java  Return.java  SellBuy.java  Tickets.java  Transactions.java  User.java
backend/src/xstream/: Accounts.java  Commit.java  OperationManager.java  Tickets.java  Transactions.java  User.java
backend/test/: AccountsTest.java  BackEndTestSuite.java  DataTest.java  OperationManagerTest.java  RecordTest.java  TicketsTests.java  TransactionsTest.java  UserTest.java
backend/test/func/: DoCreateTest.java
backend/test/logs/: Test Results - BackEndTestSuite_.html  Test Results - DoCreateTest.html  Test Results - OperationManagerTest_testDoCreate.html  Test1: Results - BackEndTestSuite.html  Test2: Results - BackEndTestSuite.html  Test3: Results - BackEndTestSuite.html  Test4: Results - BackEndTestSuite.html
backend/test/unit/: AccountsTest.java  DataTest.java  RecordTest.java  TicketsTests.java  TransactionsTest.java  UserTest.java
data/: UserAccounts.txt
doc/Phase4/: BackEnd_ClassDiagram.xmi  xstreambackend.vpp
doc/Phase4_BackEndPrototype/: xstreambackend.vpp
frontend/src/: data.cpp  tickets.cpp
frontend/test/TestFramework/: CleanTest.sh  Logger.sh  Setup.sh  TestCase.sh
gtest/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: accounts.h  data.h  session.h  tickets.h  transaction.h  xstream.h
src/: account.h  accounts.cpp  cmdfilter.cpp  cmdfilter.h  commit.cpp  data.cpp  event.cpp  login.cpp  login.h  logout.cpp  main.cpp  session.cpp  tickets.cpp  transaction.cpp  xstream.h
test/: TestCase.sh  XStreamTestSuite.sh  failure_table.txt  failure_table.txt~
test/AddCreditTestSuite/: AddCreditTestSuite.sh
test/AddCreditTestSuite/InvalidAddCreditTestCaseA/: InvalidAddCreditTestCaseA.sh
test/AddCreditTestSuite/InvalidAddCreditTestCaseB/: InvalidAddCreditTestCaseB.sh  input.txt
test/AddCreditTestSuite/ValidAddCreditTestCaseA/: ValidAddCreditTestCaseA.sh  ValidAddCreditTestCaseA.sh~  input.txt
test/AddCreditTestSuite/ValidAddCreditTestCaseB/: ValidAddCreditTestCaseB.sh  input.txt
test/BuyTestSuite/: BuyTestSuite.sh  BuyTestSuite.sh~
test/BuyTestSuite/InvalidBuyTestCaseA/: InvalidBuyTestCaseA.sh  expected.txt  input.txt~
test/BuyTestSuite/InvalidBuyTestCaseB/: InvalidBuyTestCaseB.sh  input.txt~  output.txt
test/BuyTestSuite/InvalidBuyTestCaseC/: InvalidBuyTestCaseC.sh  expected.txt  input.txt~  output.txt~
test/BuyTestSuite/InvalidBuyTestCaseD/: InvalidBuyTestCaseD.sh  input.txt~
test/BuyTestSuite/InvalidBuyTestCaseE/: InvalidBuyTestCaseE.sh  input.txt  input.txt~
test/BuyTestSuite/ValidBuyTestCase/: ValidBuyTestCase.sh  ValidBuyTestCase.sh~  input.txt~
test/CreateTestSuite/: CreateTestSuite.sh  CreateTestSuite.sh~
test/CreateTestSuite/InvalidCreateTestCaseA/: InvalidCreateTestCaseA.sh  input.txt~  output.txt~
test/CreateTestSuite/InvalidCreateTestCaseB/: InvalidCreateTestCaseB.sh  input.txt  input.txt~  output.txt~
test/CreateTestSuite/InvalidCreateTestCaseC/: InvalidCreateTestCaseC.sh  InvalidCreateTestCaseC.sh~  input.txt~
test/CreateTestSuite/InvalidCreateTestCaseD/: InvalidCreateTestCaseD.sh  input.txt  input.txt~
test/CreateTestSuite/ValidCreateTestCase/: ValidCreateTestCase.sh  expected.txt
test/DeleteTestSuite/: DeleteTestSuite.sh  DeleteTestSuite.sh~
test/DeleteTestSuite/InvalidDeleteTestCaseA/: InvalidDeleteTestCaseA.sh  input.txt~  output.txt
test/DeleteTestSuite/InvalidDeleteTestCaseB/: output.txt
test/DeleteTestSuite/ValidDeleteTestCase/: ValidDeleteTestCase.sh  expected.txt  input.txt  input.txt~  output.txt
test/FunctionalTestSuite/: FuctionalTestSuite.sh
test/FunctionalTestSuite/AddCreditTestSuite/: AddCreditTestSuite.sh
test/FunctionalTestSuite/BuyTestSuite/: BuyTestSuite.sh
test/FunctionalTestSuite/LoginTestSuite/: LoginTestSuite.sh
test/LoginTestSuite/: LoginTestSuite.sh
test/LoginTestSuite/InvalidLoginTestCase/: InvalidLoginTestCase.sh  expected.txt  output.txt
test/LoginTestSuite/ValidLoginTestCase/: ValidLoginTestCase.sh  output.txt
test/LogoutTestSuite/: LogoutTestSuite.sh~
test/SellTestSuite/: SellTestSuite.sh  SellTestSuite.sh~
test/Tbuild/: xstream
test/TemplateTestSuite/: TemplateTestSuite.sh
test/TestBuild/: xstream
test/TestFramework/: Clean.sh  Colours.sh  Logger.sh  Logging.sh  Setup.sh  TestCase.sh  TestSuite.sh  logger.sh
test/test_build/: xstream
test/test_build/data/: DailyTransactions.txt
xstream/: CMakeLists.txt
xstream/data/: AvailableTickets.txt  DailyTransactions.txt  UserAccounts.txt
xstream/doc/pritify/: highlight.pack.js
xstream/include/: accounts.h  commit.h  data.h  event.h  session.h  tickets.h  transaction.h  user.h  xstream.h
xstream/src/: account.h  accounts.cpp  commit.cpp  control.cpp  control.h  data.cpp  event.cpp  login.cpp  login.h  main.cpp  session.cpp  tickets.cpp  transaction.cpp  user.cpp  xstream.cpp  xstream.h
xstream/src/controller/: control.cpp  control.h
xstream/src/create/: create.cpp  create.h
xstream/src/data/: session.cpp  session.h
xstream/src/data/available/: tickets.cpp  tickets.h
xstream/src/data/daily/: transaction.cpp  transaction.h
xstream/src/data/user/: UserAccounts.txt  account.cpp  account.h
xstream/src/login/: login.cpp  login.h
xstream/src/logout/: logout.cpp  logout.h
xstream/src/test/: CMakeLists.txt  ControlTestSuite.h  LoginTestSuite.h  main.cpp  sample1.cpp
xstream/test/: CMakeLists.txt  ControlTestSuite.h  LoginTestSuite.h  failure_table.txt  input.txt  main.cpp
xstream/test/LoginTestSuite/: LoginTestSuite.sh
xstream/test/LoginTestSuite/ValidTestCase/: ValidTestCase.sh
xstream/test/expected/: login.txt
xstream/test/xstreamGTest/: CMakeLists.txt  XStreamTestSuite.h  main.cpp
(+116 files in other folders)
